k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: distributed-platform
  labels:
    app.kubernetes.io/part-of: distributed-platform
